bpo-36218: Fix handling of heterogeneous values in list.sort (GH-12209) GH-12532)

(cherry picked from commit dd5417afcf8924bcdd7077351941ad21727ef644)

Co-authored-by: Rémi Lapeyre <remi.lapeyre@henki.fr>